# collect-unmarked-tests

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
